2006-08-20  Chris Toshok  <toshok@ximian.com>

	* test/array.c (test_array_big): add a test from the glib
	documentation.

2006-08-20  Chris Toshok  <toshok@ximian.com>

	* test/tests.h: add array tests to the mix.

	* test/array.c: a few array tests.

	* src/glib.h: add array prototypes.

	* src/garray.c: initial array foo.

	* test/Makefile.am (SOURCES): add array.c

	* src/Makefile.am (libeglib_la_SOURCES): add garray.c

2006-08-19  Aaron Bockover  <abockover@novell.com>

	* src/gstring.c: optimize and generalize reallocation by providing
	a GROW_IF_NECESSARY macro, do not use strcpy/strcat as they are 
	very, very slow; GString is now much closer to GLib's implementation
	in terms of performance

	* test/string.c: added speed-specific tests to beat on reallocation code

	* test/test-both: run make if the test drivers don't exist

2006-08-19  Jonathan Chambers  <jonathan.chambers@gmail.com>

	* src/gmodule.c: Add gmodule support for windows and fix
	windows build. Contribution is licensed as MIT/X11.
	
2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/driver.c: Added --debug mode that allows for testing all paths
	of the driver without actually running real tests; runs only the 'fake'
	test, which does nothing; useful for running the driver through valgrind

	* test/Makefile.am:
	* test/tests.h:
	* test/fake.c: Added fake test for valgrinding the driver

	* test/ptrarray.c: update sort test

2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/test-both: added --help

2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/driver.c: added -n mode to show only raw global run times,
	which is useful for scripts (test-both --speed-compare)

	* test/test-both: added --speed-compare mode

	* test/README: updated with information on --speed-compare

2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/test.c: do not print times if -t is not passed

	* test/driver.c: removed use of GList from the driver to avoid skews due