@@ -1,3 +1,15 @@
+2006-08-20  Aaron Bockover  <abockover@novell.com>
+
+	* src/gmisc.c: added g_setenv, g_getenv, g_unsetenv
+
+	* src/gstr.c: added g_snprintf, g_sprintf, g_fprintf, g_printf
+
+	* src/glib.h: added macros for above va_args printf functions
+
+	* src/Makefile.am: added gmisc.c
+
+	* test/whats-implemented: script to see what needs to be implemented
+
 2006-08-20  Chris Toshok  <toshok@ximian.com>
 
 	* test/array.c (test_array_big): add a test from the glib
